# event-hall-management-system

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: calendar.py  customers.py  dashboard.py  payments.py  photos.py  quick_message.py  reservations.py  tasks.py  venue.py
backend/app/core/: constants.py
backend/app/crud/: customer.py  payment.py  photo.py  quick_message.py  reservation.py  task.py  venue.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  customer.py  payment.py  photo.py  quick_message.py  reservation.py  task.py  venue.py
backend/app/schemas/: calendar.py  customer.py  dashboard.py  payment.py  photo.py  quick_message.py  reservation.py  reservations.py  task.py  venue.py
backend/app/services/: billing_service.py  calendar_service.py  customer_service.py  dashboard_service.py  payment_service.py  photo_service.py  quick_message_service.py  reservation_service.py  task_service.py  venue_service.py
backend/app/utils/: date_utils.py
backend/event_hall_management_system_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: analysis.md  api-design.md  current-workflow.md  database-design.md
docs/architecture/: architecture.md  technology-stack.md
docs/diagrams/: domain-model.md
docs/requirements/: functional.md  non-functional.md  user-stories.md
docs/ui/: calendar.md  dashboard.md  reservations.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: httpClient.ts
frontend/src/hooks/: useCustomers.ts  (+14 more)
(+56 files in other folders)
