[project]
name = "event-hall-management-system-backend"
version = "0.1.0"
description = "Backend for the Event Hall Management System"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pydantic-settings",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

